<resources>
    <string name="app_name">MyCookingApp</string>
    <string name="logo_name">My Cooking App</string>

    <!-->Hints for placeholders<-->
    <string name="hint_recipe_name">Recipe Name</string>
    <string name="hint_enter_recipe">Enter Recipe</string>
    <string name="hint_for_email">Email</string>
    <string name="hint_for_password">Password</string>
    <string name="hint_for_name">User Name</string>
    <string name="hint_forgot_password">Forgot your password?</string>
    <string name="hint_ingredient">Enter ingredient and their quantity</string>
    <string name="minimum_password">password should be minimum 6 charachters</string>
    <string name="auth_failed">Authentication failed or User doesn\'t exist</string>

    <!-->Labels for buttons<-->
    <string name="btn_clear_all_input">CLEAR</string>
    <string name="btn_save_info">SAVE</string>
    <string name="btn_back">BACK</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_add">ADD RECIPE </string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_search">SEARCH</string>
    <string name="btn_reset_psw">RESET PASSWORD</string>
    <string name="btn_google">GOOGLE</string>
    <string name="btn_facebook">FACEBOOK</string>
    <string name="facebook_app_id">428114908004191</string>
    <string name="fb_login_protocol_scheme">fb428114908004191</string>

    <!-->Labels for the fields names<-->
    <string name="label_instructions">Instructions:</string>
    <string name="label_ingredients">Ingredients:</string>
    <string name="label_all">All</string>
    <string name="label_food">Food</string>
    <string name="label_drinks">Drinks</string>
    <string name="label_no_account">Don\'t have an account?</string>
    <string name="label_reset_pasword">Get a link to reset your password</string>

    <!-->Menu items names<-->
    <string name="menu_all">All Recipes</string>
    <string name="menu_myrecipe">My Recipes</string>
    <string name="menu_search">Find a Recipe</string>

    <string name="menu_logout">Log Out</string>

    <!-->Temporary names<-->
    <string name="name">Italian Pizza</string>
    <string name="title_activity_sign_up">Sign in</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <string name="msg_no_recipes_yet">You don\'t have recipes just yet</string>
    <string name="msg_only_registered_user">Only registered users can add recipes</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="tab_text_1">All Recipes</string>
    <string name="tab_text_2">My Recipes</string>
    <string name="tab_text_3">Search</string>

</resources>
