<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    tools:context=".RecipesActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup_recipes"
        android:layout_width="match_parent"
        android:onClick="onCheckedChanged"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingLeft="25dp">

        <RadioButton
            android:id="@+id/radioButton_recipes_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/label_all" />

        <RadioButton
            android:id="@+id/radioButton_recipes_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_food" />

        <RadioButton
            android:id="@+id/radioButton_recipes_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_drinks" />

    </RadioGroup>

    <ListView
        android:id="@+id/listView_recipes_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
    </ListView>

</LinearLayout>
