<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="237dp"
        android:background="@color/colorPink"
        app:layout_constraintBottom_toTopOf="@+id/forgot_psw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/photo_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="61dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="61dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic[9]" />
    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/user_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/hint_for_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/user_email"
        app:layout_constraintTop_toBottomOf="@+id/user_email" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="97dp"
        android:ems="10"
        android:hint="@string/hint_for_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />


    <Button
        android:id="@+id/btn_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/user_psw"
        app:layout_constraintTop_toBottomOf="@+id/user_psw" />

    <Button
        android:id="@+id/btn_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Login"
        app:layout_constraintStart_toStartOf="@+id/user_psw" />

    <TextView
        android:id="@+id/forgot_psw"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_marginBottom="217dp"
        android:text="@string/hint_forgot_password"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />


</android.support.constraint.ConstraintLayout>