<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNeutral"
    tools:context=".LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="272dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="263dp"
            android:background="@color/colorMain"
            app:layout_constraintBottom_toTopOf="@+id/btn_login_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/img_login_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/pizza"
                app:civ_border_color="@color/colorWhite"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_login_appName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_login_appName"
                android:layout_width="0dp"
                android:layout_height="118dp"
                android:layout_marginTop="39dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="39dp"
                android:text="@string/logo_name"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_login_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.825" />


        </android.support.constraint.ConstraintLayout>


    <EditText
        android:id="@+id/et_login_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="97dp"
        android:ems="10"
        android:hint="@string/hint_for_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <EditText
        android:id="@+id/et_login_userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/hint_for_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/et_login_psw"
        app:layout_constraintEnd_toEndOf="@+id/et_login_psw" />


        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:onClick="onClick_login"
            android:text="@string/btn_login"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/et_login_psw"
            app:layout_constraintTop_toBottomOf="@+id/et_login_psw" />

        <Button
            android:id="@+id/btn_login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="onClick_login"
            android:text="@string/btn_sign_up"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_login_forgotPsw"
            app:layout_constraintStart_toStartOf="@+id/et_login_psw" />

    <TextView
        android:id="@+id/tv_login_forgotPsw"
        android:layout_width="191dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:onClick="onClick_login"
        android:text="@string/hint_forgot_password"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_login" />

    <TextView
        android:id="@+id/tv_login_errorText"
        android:layout_width="211dp"
        android:layout_height="0dp"
        android:layout_marginBottom="429dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <Button
        android:id="@+id/btn_login_google"
        android:layout_width="208dp"
        android:layout_height="37dp"
        android:layout_marginBottom="182dp"
        android:onClick="onClick_login"
        android:background="@color/google"
        android:text="@string/btn_google"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_forgotPsw"
        app:layout_constraintVertical_bias="0.0" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_login_facebook"
            android:layout_width="208dp"
            android:layout_height="37dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:onClick="onClick_login"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_google" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>